# FluidSimulation

app/: build.gradle
app/src/androidTest/java/com/example/martin/simulation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/martin/simulation/: JavaSimulation.java  MainActivity.java  NativeSimulation.java  SettingsActivity.java  Simulation.java  SimulationView.java
app/src/main/jni/: CMakeLists.txt  Makefile  Makefile.inc  demo.cpp  dummy.c  halide_generator.cpp  halide_image.h  jnisimulation.cpp  solver.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/example/martin/simulation/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
